styles(color): ajuste de tonos en variables personalizadas

--- a/acronimo.html
+++ b/acronimo.html
@@ -4,18 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Acrónimo: TAN </title>
+    <!-- Fuentes personalizadas -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Sedgwick+Ave&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Luckiest+Guy&display=swap" rel="stylesheet">
+    <!-- Hoja de estilos externa -->
     <link rel="stylesheet" href="acronimo.css">
 </head>
 <body>
     <main class="container">
+
         <header>
             <h1> El acrónimo que me describe </h1>
             <p> Un ejercicio para practicar HTML, CSS y un poco de Javascript</p>
         </header>
-        
+        <!-- Tarjeta uno, con letra T -->
         <section>
             <div>
                 <h2> T </h2>
